Tasks reports, filter corrections, clear zero times filter,  filter form field spacing design
git-svn-id: http://192.168.0.243:4435/svn/bee/trunk@952 aaee961a-53e7-2249-bd01-b2a8f0c4ce08

--- a/war/bee.css
+++ b/war/bee.css
@@ -402,6 +402,10 @@ body {
   -webkit-filter: contrast(1) invert(1) !important;
 }
 
+.bee-HtmlTable {
+  border-collapse: collapse;
+}
+
 .bee-CellGrid {
   position: absolute;
   left: 0;
